# rust-magic

./: Cargo.toml  LICENSE
src/: lib.rs
