[package]
name = "magic"
description = "libmagic bindings"
readme = "README.md"
license = "MIT"
keywords = ["magic", "binding", "file"]
categories = ["api-bindings"]
repository = "https://github.com/robo9k/rust-magic"
documentation = "https://docs.rs/magic"
authors = [
	"Daniel Micay <danielmicay@gmail.com>",
	"Petar Radošević <petar@wunki.org>",
	"lilydjwg <lilydjwg@gmail.com>",
	"Jeff Belgum <belgum@bastille.io>",
	"Onur Aslan <onur@onur.im>",
	"robo9k <robo@9k.lv>",
]
version = "0.12.2"
exclude = [
    ".gitignore",
    ".travis.yml",
]

[lib]
name = "magic"

[dependencies]
magic-sys = { path = "../rust-magic-sys" }
bitflags = "1.2"
libc = "0.2.13"

[dev-dependencies]
regex = "0.1.71"
