[package]
name = "magic"
description = "libmagic bindings"
readme = "README.md"
license = "MIT"
keywords = ["magic", "binding", "file"]
categories = ["api-bindings"]
repository = "https://github.com/robo9k/rust-magic"
documentation = "https://docs.rs/magic"
authors = [
	"Ben Stern <bas-github@bstern.org>",
	"Daniel Micay <danielmicay@gmail.com>",
	"Petar Radošević <petar@wunki.org>",
	"lilydjwg <lilydjwg@gmail.com>",
	"Jeff Belgum <belgum@bastille.io>",
	"Onur Aslan <onur@onur.im>",
	"robo9k <robo@9k.lv>",
]
version = "0.13.0"
exclude = [
    ".gitignore",
    ".travis.yml",
]

[badges]
travis-ci = { repository = "robo9k/rust-magic" }

[lib]
name = "magic"

[dependencies]
magic-sys = { path = "../rust-magic-sys" }
bitflags = "1.2"
libc = "0.2"
errno = "0.2"

[dev-dependencies]
regex = "1.4"
